# bank-widget

./: README.md  main.py  pyproject.toml
Src/: directory_info.py  generators.py  generetors.py  mask.py  processing.py  widget.py
Test/: module_testing.py
test/: conftest.py  test_generators.py  test_mask.py  test_processing.py  test_widget.py
